test/integration/bad/new/bad_sized_type_in_fn2.stan
functions{
  void foo(vector[3] x){
    print(x);
  }
}
